# BioInformaticsAlgos

./: CMakeLists.txt
BWA/: bwa.cpp
BurrowsWheeler/: Burrow.cpp  Burrow.h  burrow.cpp  burrow.h  burrows.cpp
EditDistance/: EditDistance.cpp
HierHolzer/: HierHolzer.cpp
SuffixArray/: SuffixArray.cpp
SuffixTrie/: SuffixTrie.cpp  TrieNode.cpp  TrieNode.h
